--- a/Privacy Policy Page/index.html
+++ b/Privacy Policy Page/index.html
@@ -49,13 +49,13 @@
       font-family: Arial !important;
       word-break: break-word !important;
               }
-      -->
+      -
     </style>
 
     <div data-custom-class="body" class="container mt-5 mb-5">
       <div class="d-flex justify-content-center flex-column align-items-center">
         <img
-          src="./icon.png"
+          src="../assets/icon.png"
           alt="logo"
           width="100"
           height="100"
