--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -1,108 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scliasdlkfjale=1.0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-    <style>
-      body {
-        background: #484848;
-      }
-      .text-color-light {
-        color: #c4c4c2;
-      }
-      .card-image-container {
-        position: relative;
-        width: 100%;
-        padding-bottom: 70%;
-        float: left;
-        /* background: #000; */
-      }
-      /* .card-img { */
-        /* position: absolute; */
-        /* top: 0; */
-        /* left: 0; */
-        /* right: 0; */
-        /* bottom: 0; */
-        /* margin: auto; */
-      /* } */
-      /* .card { */
-        /* float: left; */
-        /* width: 33.333333%; */
-      /* } */
-      /* img { */
-        /* max-height: 100%; */
-        /* max-width: 100%; */
-      /* } */
-    </style>
-  </head>
-  <body class="container mt-5 mb-5">
-    <div class="d-flex justify-content-center flex-column align-items-center">
-      <img
-        src="../assets/icon.png"
-        alt="logo"
-        width="100"
-        height="100"
-        class="mb-3 shadow"
-      />
-      <h2 class="text-color-light font-weight-bold">Marksman Journal</h2>
-      <h5 class="text-color-light mb-5">Competition Shooting Training App</h5>
-      <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-4 col-lg-3">
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss1.jpg" class="card-img" />
-                </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scliasdlkfjale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/d2ada0bf02.js" crossorigin="anonymous"></script>
+  <title>Document</title>
+  <style>
+    body {
+      background: #484848;
+    }
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss2.jpg" class="card-img" />
-                </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+    .text-color-light {
+      color: #c4c4c2;
+    }
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss3.jpg" class="card-img" />
-                </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+    .card-image-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 70%;
+      float: left;
+    }
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss4.jpg" class="card-img" />
-                </div>
-        </div>
-    </div>
-   <!-- Row 2  -->
+    .card {
+      min-width: 100px;
+      min-height: 100px;
+      background-color: #C8AD68;
+      border-width: 2px;
+      border-color: #413924;
+      border-radius: 15px;
+    }
+  </style>
+</head>
+
+<body class="container mt-5 mb-5">
+  <div class="d-flex justify-content-center flex-column align-items-center">
+    <img src="../assets/icon.png" alt="logo" width="100" height="100" class="mb-3 shadow" />
+    <h2 class="text-color-light font-weight-bold">Marksman Journal</h2>
+    <h5 class="text-color-light mb-5">Competition Shooting Training App</h5>
     <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+      <div class="col-sm-12 col-md-4 col-lg-3">
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss5.jpg" class="card-img" />
-                </div>
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss1.jpg" class="card-img" />
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3">
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss6.jpg" class="card-img" />
-                </div>
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss2.jpg" class="card-img" />
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3">
 
-                <div class="card-img-container mb-5 shadow">
-                    <img src="../assets/ss7.jpg" class="card-img" />
-                </div>
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss3.jpg" class="card-img" />
         </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3">
+
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss4.jpg" class="card-img" />
+        </div>
+      </div>
     </div>
-  </body>
+    <!-- Row 2  -->
+    <div class="row justify-content-center">
+      <div class="col-sm-12 col-md-4 col-lg-3">
+
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss5.jpg" class="card-img" />
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3">
+
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss6.jpg" class="card-img" />
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-3">
+
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss7.jpg" class="card-img" />
+        </div>
+      </div>
+    </div>
+    <h5 class="text-color-light mb-3">Available On</h5>
+    <div class="row">
+      <div class="card col mx-3 d-flex justify-content-center align-items-center">
+        <i class="fa-brands fa-android fa-2xl mb-3 mt-4"></i>
+        <h5>android</h5>
+      </div>
+      <div class="card col mx-3 d-flex justify-content-center align-items-center">
+        <i class="fa-brands fa-apple fa-2xl mb-3 mt-4"></i>
+        <h5>iOS</h5>
+      </div>
+    </div>
+</body>
+
 </html>
