Adding privacy policy to langing page

--- a/landing/index.html
+++ b/landing/index.html
@@ -38,13 +38,21 @@
       color: #413924;
     }
 
+    .link {
+      color: #7b7b7b
+    }
+
+    .link:hover {
+      color: #c6c6c6
+    }
+
     a {
       color: #413924;
       text-decoration: none;
     }
 
     a:hover {
-      color: #413924;
+      color: #65625b;
       text-decoration: none;
     }
   </style>
@@ -127,6 +135,13 @@
         class="fa-solid fa-envelope fa-xl text-color-light mr-3"></i>
       <h5 class="text-color-light">support@marksmanjournal.com</h5>
     </div>
+    <a class="link" href="https://marksmanjournal.com/privacy_policy/index.html">
+
+      <h5 class="mb-3 
+      ">Privacy Policy
+
+      </h5>
+    </a class="link">
     <h5 class=" mb-5 mb-5">©
       <script>document.write(/\d{4}/.exec(Date())[0])</script> That Guy's Garage LLC
     </h5>
