--- a/landing/index.html
+++ b/landing/index.html
@@ -109,10 +109,11 @@
           <img src="../assets/ss7.jpg" class="card-img" />
         </div>
       </div>
+
     </div>
     <h5 class="text-color-light mb-3">Available On</h5>
     <div class="row mb-5">
-      <a href="">
+      <a href="https://play.google.com/store/apps/details?id=com.sharpsmountain.marksman_journal">
         <div class="card col mx-3 d-flex justify-content-center align-items-center shadow">
           <i class="fa-brands fa-android fa-2xl mb-3 mt-4 primary-dark"></i>
           <h5>android</h5>
@@ -131,11 +132,18 @@
         class="fa-solid fa-phone fa-xl text-color-light mr-3"></i>
       <h5 class="text-color-light">1 (866) 855-5471</h5>
     </div>
-    <div class="d-flex row align-items-center justify-content-center mb-5"><i
-        class="fa-solid fa-envelope fa-xl text-color-light mr-3"></i>
-      <h5 class="text-color-light">support@marksmanjournal.com</h5>
+      <div class="column">
+    <div class="d-flex row align-items-center justify-content-center ">        
+
+<i class="fa-solid fa-envelope fa-xl text-color-light mr-3"></i>
+
+      <h5 class="text-color-light">
+        <a class="text-color-light" href="mailto:someone@example.com">support@marksmanjournal.com</a>
+      </h5>
+        </div>
+        <h5 class="text-warning mb-5">If you wish to delete your account, please reach out via email. We are happy to assist you.</h5>
     </div>
-    <a class="link" href="https://marksmanjournal.com/privacy_policy/index.html">
+    <a class="link " href="https://marksmanjournal.com/privacy_policy/index.html">
 
       <h5 class="mb-3 
       ">Privacy Policy
