--- a/RAM/landing/index.html
+++ b/RAM/landing/index.html
@@ -11,11 +11,11 @@
   <title>Document</title>
   <style>
     body {
-      background: #484848;
+      background: #383B4B;
     }
 
     .text-color-light {
-      color: #c4c4c2;
+      color: #CFD2E7;
     }
 
     .card-image-container {
@@ -28,14 +28,14 @@
     .card {
       width: 100px;
       height: 100px;
-      background-color: #C8AD68;
+      background-color: #383B4B;
       border-width: 2px;
-      border-color: #413924;
+      border-color: #CFD2E7;
       border-radius: 15px;
     }
 
     .primary-dark {
-      color: #413924;
+      color: #CFD2E7;
     }
 
     .link {
@@ -47,7 +47,7 @@
     }
 
     a {
-      color: #413924;
+      color: #CFD2E7;
       text-decoration: none;
     }
 
@@ -61,8 +61,8 @@
 <body class="container mt-5 mb-5">
   <div class="d-flex justify-content-center flex-column align-items-center">
     <img src="../assets/icon.png" alt="logo" width="100" height="100" class="mb-3 shadow" />
-    <h2 class="text-color-light font-weight-bold">Marksman Journal</h2>
-    <h5 class="text-color-light mb-5">Competition Shooting Training App</h5>
+    <h2 class="text-color-light font-weight-bold">RAM K9 Training</h2>
+    <h5 class="text-color-light mb-5">Training Tracker for Working Dogs</h5>
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-4 col-lg-3">
 
@@ -109,6 +109,12 @@
           <img src="../assets/ss7.jpg" class="card-img" />
         </div>
       </div>
+      <div class="col-sm-12 col-md-4 col-lg-3">
+
+        <div class="card-img-container mb-5 shadow">
+          <img src="../assets/ss8.jpg" class="card-img" />
+        </div>
+      </div>
 
     </div>
     <h5 class="text-color-light mb-3">Available On</h5>
@@ -138,14 +144,14 @@
 <i class="fa-solid fa-envelope fa-xl text-color-light mr-3"></i>
 
       <h5 class="text-color-light">
-        <a class="text-color-light" href="mailto:someone@example.com">support@marksmanjournal.com</a>
+        <a class="text-color-light" href="mailto:support@rayallentraininggroup.com">support@rayallentraininggroup.com</a>
       </h5>
         </div>
         <h5 class="text-warning mb-5">If you wish to delete your account, please reach out via email. We are happy to assist you.</h5>
     </div>
-    <a class="link " href="https://marksmanjournal.com/privacy_policy/index.html">
+    <a class="link " href="https://sharpsmountain.com/pages/ram-k9-training-privacy-policy">
 
-      <h5 class="mb-3 
+      <h5 class="mb-3 text-color-light 
       ">Privacy Policy
 
       </h5>
