fix: :speech_balloon: Removing the account deletion language

--- a/MJ/landing/index.html
+++ b/MJ/landing/index.html
@@ -138,10 +138,9 @@
 <i class="fa-solid fa-envelope fa-xl text-color-light mr-3"></i>
 
       <h5 class="text-color-light">
-        <a class="text-color-light" href="mailto:support@marksmanjournal.com">support@marksmanjournal.com</a>
+        <a class="text-color-light" href="mailto:support@.com">support@marksmanjournal.com</a>
       </h5>
         </div>
-        <h5 class="text-warning mb-5">If you wish to delete your account, please reach out via email. We are happy to assist you.</h5>
     </div>
     <a class="link " href="https://marksmanjournal.com/privacy_policy/index.html">
 
